@@ -1,4 +1,4 @@
-Highlight version 1.7
+Highlight version 1.8
 ======================
 
 INSTALLATION
@@ -16,7 +16,7 @@ This module and script do not require any additional packages.
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2008 by A. Radkov
+Copyright (C) 2008-2015 by A. Radkov
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.8 or,
